fixed the overflow issue

--- a/src/components/Home/ProjectsSection/ProjectsSection.css
+++ b/src/components/Home/ProjectsSection/ProjectsSection.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Signika:wght@300..700&display=swap");
 
+body {
+  overflow-x: hidden;
+}
+
 .projects-main {
   width: 100%;
   background-image: linear-gradient(
@@ -7,6 +11,7 @@
     rgba(255, 255, 255, 1)
   );
   padding-bottom: 112px;
+  overflow: hidden;
 }
 
 .projects-box {
@@ -70,11 +75,20 @@
 }
 
 .project-container {
-  max-width: 1216px;
-  margin: 40px auto; /* Centers the container horizontally */
+  max-width: 98%;
+  margin: 40px auto; /* Center the container */
   display: flex;
   justify-content: space-between; /* Ensures equal spacing between cards */
   gap: 32px; /* Spacing between cards */
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.project-container::-webkit-scrollbar {
+  display: none;
 }
 
 .projects-cards {
@@ -84,12 +98,15 @@
   border-radius: 16px;
   padding-bottom: 32px;
   box-shadow: 0px 20px 24px -4px #0a0d1214;
+  flex: 0 0 auto;
+  scroll-snap-align: start;
 }
 
 .project-image {
   height: 300px;
   object-fit: cover;
 }
+
 .project-info {
   padding: 0px 16px 0px 16px;
 }
